Fix product tiles height; remove index page; truncate long product names on product tiles

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7,6 +7,7 @@
 }
 
 .product-tile {
+    height: 350px;
     padding-left: 20px;
     padding-right: 20px;
     margin-bottom: 10px;
